[package]
name = "srt-protocol"
version = "0.3.0"
edition = "2024"
description = "Pure Rust implementation of the SRT (Secure Reliable Transport) protocol"
license = "MPL-2.0"

[dependencies]
bytes = "1.11.1"
bitflags = "2.11.1"
log = "0.4.29"
rand = "0.10.1"

# Encryption (feature-gated, all pure Rust)
# RustCrypto 0.9+ migrated to hybrid-array; aes-gcm here is still 0.10
# (generic-array). Keep the rest of the suite on the same generation
# until aes-gcm bumps too — mixing breaks Block trait alignment.
aes = { version = "0.9.0", optional = true }
ctr = { version = "0.10.0", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
pbkdf2 = { version = "0.13.0", optional = true }
sha1 = { version = "0.11", optional = true }
hmac = { version = "0.13", optional = true }
aes-kw = { version = "0.3.0", optional = true }

[features]
default = ["encryption"]
encryption = ["dep:aes", "dep:ctr", "dep:aes-gcm", "dep:pbkdf2", "dep:sha1", "dep:hmac", "dep:aes-kw"]

[dev-dependencies]
