[package]
name = "srt-transport"
version = "0.2.0"
edition = "2024"
description = "Async I/O transport layer for the SRT protocol"
license = "MPL-2.0"

[dependencies]
srt-protocol = { path = "../srt-protocol" }
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "time", "sync", "macros"] }
socket2 = { version = "0.6.3", features = ["all"] }
log = "0.4.29"
bytes = "1.11.1"
bitflags = "2.11.0"
rand = "0.10.0"

[dev-dependencies]
env_logger = "0.11"
