[package]
name = "srt-transport"
version = "0.3.1"
edition = "2024"
description = "Async I/O transport layer for the SRT protocol"
license = "MPL-2.0"

[dependencies]
srt-protocol = { path = "../srt-protocol" }
tokio = { version = "1.52.1", features = ["net", "rt-multi-thread", "time", "sync", "macros"] }
socket2 = { version = "0.6.3", features = ["all"] }
log = "0.4.29"
bytes = "1.11.1"
bitflags = "2.11.1"
rand = "0.10.1"

[dev-dependencies]
env_logger = "0.11"
